--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -34,7 +34,7 @@ $spacing-8: 2rem;
 $spacing-10: 2.5rem;
 
 // Widths
-$sidebar-width-lg: 300px;
+$sidebar-width-lg: 480px;
 
 // Typography
 $font-size-sm: 0.875rem;
@@ -64,3 +64,46 @@ $shadow-lg: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 // Transitions
 $transition-duration: 200ms;
 $transition-timing: ease-in-out;
+
+@mixin transition($property: all, $duration: 0.45s, $ease: cubic-bezier(0.65, 0, 0.076, 1)) {
+  transition: $property $duration $ease;
+}
+
+$background-light: #eeeeee;
+$background-dark: #151515;
+$text-light: #111318;
+$text-dark: #f0f2f4;
+
+:root {
+  --background: #{$background-light};
+  --foreground: #{$text-light};
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: #{$background-dark};
+    --foreground: #{$text-dark};
+  }
+}
+
+// Breakpoints
+$breakpoint-sm: 640px;
+$breakpoint-md: 768px;
+$breakpoint-lg: 1024px;
+
+// Mixin for media queries
+@mixin mq($size) {
+  @if $size == sm {
+    @media (min-width: $breakpoint-sm) {
+      @content;
+    }
+  } @else if $size == md {
+    @media (min-width: $breakpoint-md) {
+      @content;
+    }
+  } @else if $size == lg {
+    @media (min-width: $breakpoint-lg) {
+      @content;
+    }
+  }
+}
