--- a/src/components/layout/Navigation/Navigation.scss
+++ b/src/components/layout/Navigation/Navigation.scss
@@ -1,108 +1,101 @@
 @import "../../../styles/variables.scss";
 @import "../../../styles/_mixins.scss";
 
-.main-nav {
+.navigation {
+  display: flex;
+  flex-direction: column;
   margin-bottom: 2rem;
   border-top: 1px solid var(--color-border);
   border-bottom: 1px solid var(--color-border);
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-.nav-list {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem; /* space-y-2 */
-}
-.nav-link {
-  font-size: 1rem;
-  font-weight: 600;
-  transition: color 0.2s;
-  padding-bottom: 0.25rem;
-  width: 100%;
-  text-align: left;
-  color: var(--color-text-medium);
-  cursor: pointer;
-}
-
-.navigation-link {
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-  outline: none;
-  border: 0;
-  vertical-align: middle;
-  text-decoration: none;
-  background: transparent;
-  padding: 0;
-  font-size: inherit;
-  font-family: inherit;
-  width: 12rem;
-  height: auto;
-  .navigation-link_circle {
-    @include transition(all, 0.45s, cubic-bezier(0.65, 0, 0.076, 1));
+  &-link {
+    font-size: 1rem;
+    font-weight: 600;
+    transition: color 0.2s;
+    padding-bottom: 0.25rem;
+    margin-bottom: 0.5rem;
+    width: 100%;
+    text-align: left;
+    color: var(--color-text-medium);
+    cursor: pointer;
     position: relative;
-    display: block;
-    margin: 0;
-    width: 3rem;
-    height: 3rem;
-    background: $black;
-    border-radius: 1.625rem;
-    &_icon {
+    display: inline-block;
+    cursor: pointer;
+    outline: none;
+    border: 0;
+    vertical-align: middle;
+    text-decoration: none;
+    background: transparent;
+    padding: 0;
+    width: 12rem;
+    height: auto;
+    .navigation-link_circle {
+      @include transition(all, 0.45s, cubic-bezier(0.65, 0, 0.076, 1));
+      position: relative;
+      display: block;
+      margin: 0;
+      width: 3rem;
+      height: 3rem;
+      background: $black;
+      border-radius: 1.625rem;
+      &_icon {
+        @include transition(all, 0.45s, cubic-bezier(0.65, 0, 0.076, 1));
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        background: $white;
+        &.arrow {
+          @include transition(all, 0.45s, cubic-bezier(0.65, 0, 0.076, 1));
+          left: 0.625rem;
+          width: 1.125rem;
+          height: 0.125rem;
+          background: none;
+          &::before {
+            position: absolute;
+            content: "";
+            top: -0.25rem;
+            right: 0.0625rem;
+            width: 0.625rem;
+            height: 0.625rem;
+            border-top: 0.125rem solid #fff;
+            border-right: 0.125rem solid #fff;
+            transform: rotate(45deg);
+          }
+        }
+      }
+    }
+    &_text {
       @include transition(all, 0.45s, cubic-bezier(0.65, 0, 0.076, 1));
       position: absolute;
       top: 0;
+      left: 0;
+      right: 0;
       bottom: 0;
-      margin: auto;
-      background: $white;
-      &.arrow {
-        @include transition(all, 0.45s, cubic-bezier(0.65, 0, 0.076, 1));
-        left: 0.625rem;
-        width: 1.125rem;
-        height: 0.125rem;
-        background: none;
-        &::before {
-          position: absolute;
-          content: "";
-          top: -0.25rem;
-          right: 0.0625rem;
-          width: 0.625rem;
-          height: 0.625rem;
-          border-top: 0.125rem solid #fff;
-          border-right: 0.125rem solid #fff;
-          transform: rotate(45deg);
-        }
-      }
+      padding: 0.75rem 0;
+      margin: 0 0 0 1.85rem;
+      color: $black;
+      font-weight: 700;
+      line-height: 1.6;
+      text-align: center;
+      text-transform: uppercase;
     }
-  }
-  &_text {
-    @include transition(all, 0.45s, cubic-bezier(0.65, 0, 0.076, 1));
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    padding: 0.75rem 0;
-    margin: 0 0 0 1.85rem;
-    color: $black;
-    font-weight: 700;
-    line-height: 1.6;
-    text-align: center;
-    text-transform: uppercase;
-  }
 
-  &:hover,
-  &.active {
-    .navigation-link_circle {
-      width: 100%;
-      .navigation-link_circle_icon {
-        &.arrow {
-          background: $white;
-          transform: translate(1rem, 0);
+    &:hover,
+    &.active {
+      .navigation-link_circle {
+        width: 100%;
+        .navigation-link_circle_icon {
+          &.arrow {
+            background: $white;
+            transform: translate(1rem, 0);
+          }
         }
       }
-    }
-    .navigation-link_text {
-      color: $white;
+      .navigation-link_text {
+        color: $white;
+      }
     }
   }
 }
