--- a/src/components/layout/Sidebar/Sidebar.scss
+++ b/src/components/layout/Sidebar/Sidebar.scss
@@ -1,13 +1,30 @@
 @import "../../../styles/_mixins.scss";
 
 .sidebar {
-  padding: 2rem;
   z-index: 20;
   display: flex;
   flex-direction: column;
   position: fixed;
   height: 100vh;
   width: $sidebar-width-lg;
+  padding: 2rem;
+}
+
+.profile {
+  &-name {
+    font-size: 3rem;
+    font-weight: 700;
+    margin-top: 1rem;
+    margin-bottom: 0.25rem;
+  }
+  &-title {
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-bottom: 1.5rem;
+  }
+  &-summary {
+    font-size: 0.875rem;
+  }
 }
 
 // @media (min-width: 768px) {
