--- a/src/components/ui/ProjectCard/ProjectCard.scss
+++ b/src/components/ui/ProjectCard/ProjectCard.scss
@@ -1,4 +1,4 @@
-@import "@/styles/variables.scss";
+@use "../../../styles/variables.scss" as *;
 
 .project-card {
   padding: 1.5rem;
@@ -22,7 +22,9 @@
   }
   &:hover {
     cursor: pointer;
-    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.05);
+    box-shadow:
+      0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -2px rgba(0, 0, 0, 0.05);
   }
 }
 
