--- a/src/components/layout/Navigation/Navigation.scss
+++ b/src/components/layout/Navigation/Navigation.scss
@@ -1,5 +1,5 @@
-@import "../../../styles/variables.scss";
-@import "../../../styles/_mixins.scss";
+@use "../../../styles/variables.scss" as *;
+@use "../../../styles/_mixins.scss" as *;
 
 .navigation {
   display: flex;
