--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,21 +1,14 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import PortfolioApp from "../components/PortfolioApp.tsx";
+import Hero from "@/components/Hero.astro";
 
 // Import JSON data
 import profileData from "../../data/profile.json";
-import experienceData from "../../data/experience.json";
-import projectsData from "../../data/projects.json";
 ---
 
 <Layout
   title={`${profileData.profileBio.name} - ${profileData.profileBio.title}`}
   description={profileData.profileBio.summary}
 >
-  <PortfolioApp
-    profileData={profileData}
-    experienceData={experienceData}
-    projectsData={projectsData}
-    client:load
-  />
+  <Hero />
 </Layout>
