--- a/src/components/SidebySide.astro
+++ b/src/components/SidebySide.astro
@@ -8,8 +8,8 @@ import classes from '@/data/commonClasses.json';
   <div class={classes.container}>
     <div class="grid grid-cols-1 lg:grid-cols-12 gap-12 lg:gap-24">
       <div class="lg:col-span-5 space-y-8">
-        <h2 class="text-4xl md:text-5xl font-bold tracking-tight">
-          Obsessed with <br /><span class="text-gray-400">every detail.</span>
+        <h2 class={classes.subHeading}>
+          Obsessed with <span class="text-gray-400">every detail.</span>
         </h2>
         <p class="text-lg text-secondary-text dark:text-gray-400 leading-relaxed">
           I believe that the difference between good and great lies in the nuances. From the
