--- a/src/components/SidebySide.astro
+++ b/src/components/SidebySide.astro
@@ -11,7 +11,7 @@ import classes from '@/data/commonClasses.json';
         <h2 class={classes.subHeading}>
           Obsessed with <span class="text-gray-400">every detail.</span>
         </h2>
-        <p class="text-lg text-secondary-text dark:text-gray-400 leading-relaxed">
+        <p class="text-base text-secondary-text dark:text-gray-400 leading-relaxed">
           I believe that the difference between good and great lies in the nuances. From the
           fluidity of an animation to the semantic structure of the DOM, I pour attention into every
           aspect of the frontend experience.
