--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,7 +7,7 @@ import classes from '@/data/commonClasses.json';
 
 <section class="flex items-center relative overflow-hidden py-16" id="hero">
   <div
-    class="max-w-7xl mx-auto px-6 lg:px-12 w-full grid grid-cols-1 lg:grid-cols-2 gap-16 items-center"
+    class={`${classes.container} px-6 lg:px-12 w-full grid grid-cols-1 lg:grid-cols-2 gap-16 items-center`}
   >
     <div class="space-y-8 order-2 lg:order-1">
       <div class="space-y-2">
