--- a/src/components/SidebySide.astro
+++ b/src/components/SidebySide.astro
@@ -1,6 +1,6 @@
 ---
-import Button from '@/components/Button.astro';
-import classes from '@/data/commonClasses.json';
+import Button from '@/components/shared/Button.astro';
+import classes from '@/data/styles.json';
 ---
 
 <section class="bg-secondary-bg py-24 px-6 lg:px-12" id="about">
