--- a/src/components/shared/Footer.astro
+++ b/src/components/shared/Footer.astro
@@ -1,8 +1,8 @@
 ---
 // Footer component
 import type { SocialLink } from '@/types';
-import Button from '@/components/Button.astro';
-import classes from '@/data/commonClasses.json';
+import Button from '@/components/shared/Button.astro';
+import classes from '@/data/styles.json';
 
 interface Props {
   socials: SocialLink[];
