--- a/src/components/shared/Intro.astro
+++ b/src/components/shared/Intro.astro
@@ -1,5 +1,5 @@
 ---
-import classes from '@/data/commonClasses.json';
+import classes from '@/data/styles.json';
 
 interface Props {
   preheading?: string;
