--- a/src/components/RecentProjects.astro
+++ b/src/components/RecentProjects.astro
@@ -1,5 +1,5 @@
 ---
-import classes from '@/data/commonClasses.json';
+import classes from '@/data/styles.json';
 ---
 
 <section class="py-24 px-6 bg-gray-50 dark:bg-[#181818]">
